# machete

./: .gitignore  README.md  pyproject.toml
src/machete/: main.py
