[project]
name = "machete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scraper",
    "connector",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
scraper = { workspace = true }
connector = { workspace = true }


[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.8",
]
